* Support importing of Users with Roles * Fix Role test * crud_form for project_framework * Removed truncate from project_framework datatable * DRRPP max width for org fields * DRRPP Fix project stats & links on home page

--- a/static/themes/DRRPP/widgets.css
+++ b/static/themes/DRRPP/widgets.css
@@ -67,6 +67,11 @@ div.form-container form .embeddedComponent  textarea  {
 }
 
 /* Styling for specific fields */
+
+#project_project_sub_drrpp_organisation_id,
+#project_project_organisation_id {
+    width: 500px;
+}
 [name*="partnerorganisation_i_organisation_id"],
 [name*="donororganisation_i_organisation_id"] {
     width: 300px;
